--- a/CSS/style.css
+++ b/CSS/style.css
@@ -6,3 +6,76 @@
     box-sizing: border-box;
     font-family: "Poppins", sans-serif;
 }
+
+           /* body */
+
+body{
+    display: grid;
+    place-items: center;
+    background: #6C757D;
+    height: 100vh;
+    width: 100%;
+}
+                             /* content */
+.content{
+    width: 300px;
+    height: 230px;
+    padding: 15px 25px;
+    border-radius: 5px;
+    background: #F8F9FA;
+    box-shadow: 1px 3px 2px rgba(0, 0, 0, 0.15);
+    text-align: center;
+    
+}
+
+                      /* Front */
+
+.front div{
+    margin: 10px 0;
+}
+
+                            /* icon-title */
+.front .logo i{
+    font-size: 50px;
+    color: #D62828;
+}
+
+.front .logo .title{
+    font-size: 25px;
+    font-weight: 600;
+}
+                                /* icon-title */
+.front .parag{
+    font-size: 14px;
+}
+
+
+                        /* button-delete-cancel */
+.front .btns .delete{
+    background: #0085CC;
+}
+
+.front .btns .Cancel{
+    background: #D62828;
+}
+
+.front .btns .delete,
+.front .btns .Cancel{
+    padding: 5px 20px;
+    color: #ffffff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+.front .btns .delete:hover{
+    background: #004266;
+}
+
+.front .btns .Cancel:hover{
+    background: #8A1919;
+}
+
+                            /* Back-end */
+
